Fix integ test failure in 2.0 RC.
Signed-off-by: Govind Kamat <govkamat@amazon.com>